Remove -XX:MaxPermSize from scriptedLaunchOpts
sbt 1 requires java 8+ where MaxPermSize is no longer present.